Fixed alignment of home.jsx pics

--- a/Public/CSS/style.css
+++ b/Public/CSS/style.css
@@ -30,19 +30,25 @@ html,body {
 
   h1{
     color:blue;
+    font-size:25px;
+    font-style:arial;
   }
 
-  h2{
+  h2 {
     color:purple;
+    font-size:30px;
+    font-style:arial;
   }
+
 h3 {
     color:purple;
   }
 
 h4 {
   color:blue;
+  font-size:20px;
+    font-style:arial;
 }
-
 
   .content {
     min-height: 100%;
@@ -60,6 +66,18 @@ h4 {
     color:white;
   }
 
+  .column {
+    float: left;
+    width: 15.33%;
+    padding: 5px;
+  }
+
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
   .footer,
   .push {
     position:sticky;
@@ -69,6 +87,10 @@ h4 {
     bottom:0.1em;
     background-color:black;
     margin-top: -50px;
+  }
+
+  main {
+    text-align:center;
   }
 
   nav {
